--- a/regression.ipynb
+++ b/regression.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Logistic Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 91,
    "metadata": {},
@@ -17,6 +25,14 @@
     "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Reading CSV</h3>"
    ]
   },
   {
@@ -145,6 +161,14 @@
    "source": [
     "df=pd.read_csv('diabetes_prediction_dataset.csv')\n",
     "df.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Describing the Database</h3>"
    ]
   },
   {
@@ -324,6 +348,14 @@
    ],
    "source": [
     "df.describe()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Looking for correlations</h3>"
    ]
   },
   {
@@ -521,6 +553,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Replacing object type columns to integers</h3>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
@@ -606,6 +646,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Boxplot using Seaborn</h3>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 95,
    "metadata": {},
@@ -637,6 +685,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Finally Training the Logistic Regression Model</h3>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
@@ -664,13 +720,6 @@
     "model.fit(X_train,y_train)\n",
     "print(f'{model.score(X_test,y_test)*100} % Accuracy')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
