--- a/regression.ipynb
+++ b/regression.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,8 @@
     "from sklearn.metrics import recall_score\n",
     "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV\n"
    ]
   },
   {
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -133,27 +134,114 @@
        "      <td>155</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99995</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No Info</td>\n",
+       "      <td>27.32</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99996</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No Info</td>\n",
+       "      <td>17.37</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99997</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>former</td>\n",
+       "      <td>27.83</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>155</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99998</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>never</td>\n",
+       "      <td>35.42</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99999</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>current</td>\n",
+       "      <td>22.43</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>100000 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   gender   age  hypertension  heart_disease smoking_history    bmi   \n",
-       "0  Female  80.0             0              1           never  25.19  \\\n",
-       "1  Female  54.0             0              0         No Info  27.32   \n",
-       "2    Male  28.0             0              0           never  27.32   \n",
-       "3  Female  36.0             0              0         current  23.45   \n",
-       "4    Male  76.0             1              1         current  20.14   \n",
+       "       gender   age  hypertension  heart_disease smoking_history    bmi   \n",
+       "0      Female  80.0             0              1           never  25.19  \\\n",
+       "1      Female  54.0             0              0         No Info  27.32   \n",
+       "2        Male  28.0             0              0           never  27.32   \n",
+       "3      Female  36.0             0              0         current  23.45   \n",
+       "4        Male  76.0             1              1         current  20.14   \n",
+       "...       ...   ...           ...            ...             ...    ...   \n",
+       "99995  Female  80.0             0              0         No Info  27.32   \n",
+       "99996  Female   2.0             0              0         No Info  17.37   \n",
+       "99997    Male  66.0             0              0          former  27.83   \n",
+       "99998  Female  24.0             0              0           never  35.42   \n",
+       "99999  Female  57.0             0              0         current  22.43   \n",
        "\n",
-       "   HbA1c_level  blood_glucose_level  diabetes  \n",
-       "0          6.6                  140         0  \n",
-       "1          6.6                   80         0  \n",
-       "2          5.7                  158         0  \n",
-       "3          5.0                  155         0  \n",
-       "4          4.8                  155         0  "
+       "       HbA1c_level  blood_glucose_level  diabetes  \n",
+       "0              6.6                  140         0  \n",
+       "1              6.6                   80         0  \n",
+       "2              5.7                  158         0  \n",
+       "3              5.0                  155         0  \n",
+       "4              4.8                  155         0  \n",
+       "...            ...                  ...       ...  \n",
+       "99995          6.2                   90         0  \n",
+       "99996          6.5                  100         0  \n",
+       "99997          5.7                  155         0  \n",
+       "99998          4.0                  100         0  \n",
+       "99999          6.6                   90         0  \n",
+       "\n",
+       "[100000 rows x 9 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,6 +807,84 @@
     "model=LogisticRegression(max_iter=100000)\n",
     "model.fit(X_train,y_train)\n",
     "print(f'{model.score(X_test,y_test)*100} % Accuracy')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Finding the best hyperparameters to see if we can improve the accuracy of our model</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-9 {color: black;background-color: white;}#sk-container-id-9 pre{padding: 0;}#sk-container-id-9 div.sk-toggleable {background-color: white;}#sk-container-id-9 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-9 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-9 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-9 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-9 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-9 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-9 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-9 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-9 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-9 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-9 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-9 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-9 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-9 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-9 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-9 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-9 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-9 div.sk-item {position: relative;z-index: 1;}#sk-container-id-9 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-9 div.sk-item::before, #sk-container-id-9 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-9 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-9 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-9 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-9 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-9 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-9 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-9 div.sk-label-container {text-align: center;}#sk-container-id-9 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-9 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-9\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>GridSearchCV(cv=5, estimator=LogisticRegression(max_iter=100000),\n",
+       "             param_grid={&#x27;C&#x27;: array([1.00000000e-04, 7.74263683e-04, 5.99484250e-03, 4.64158883e-02,\n",
+       "       3.59381366e-01, 2.78255940e+00, 2.15443469e+01, 1.66810054e+02,\n",
+       "       1.29154967e+03, 1.00000000e+04]),\n",
+       "                         &#x27;penalty&#x27;: [&#x27;l2&#x27;]},\n",
+       "             scoring=&#x27;accuracy&#x27;)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-9\" type=\"checkbox\" ><label for=\"sk-estimator-id-9\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">GridSearchCV</label><div class=\"sk-toggleable__content\"><pre>GridSearchCV(cv=5, estimator=LogisticRegression(max_iter=100000),\n",
+       "             param_grid={&#x27;C&#x27;: array([1.00000000e-04, 7.74263683e-04, 5.99484250e-03, 4.64158883e-02,\n",
+       "       3.59381366e-01, 2.78255940e+00, 2.15443469e+01, 1.66810054e+02,\n",
+       "       1.29154967e+03, 1.00000000e+04]),\n",
+       "                         &#x27;penalty&#x27;: [&#x27;l2&#x27;]},\n",
+       "             scoring=&#x27;accuracy&#x27;)</pre></div></div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-10\" type=\"checkbox\" ><label for=\"sk-estimator-id-10\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">estimator: LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression(max_iter=100000)</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-11\" type=\"checkbox\" ><label for=\"sk-estimator-id-11\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression(max_iter=100000)</pre></div></div></div></div></div></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "GridSearchCV(cv=5, estimator=LogisticRegression(max_iter=100000),\n",
+       "             param_grid={'C': array([1.00000000e-04, 7.74263683e-04, 5.99484250e-03, 4.64158883e-02,\n",
+       "       3.59381366e-01, 2.78255940e+00, 2.15443469e+01, 1.66810054e+02,\n",
+       "       1.29154967e+03, 1.00000000e+04]),\n",
+       "                         'penalty': ['l2']},\n",
+       "             scoring='accuracy')"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "param_grid = {\n",
+    "    \"C\": np.logspace(-4, 4, 10),\n",
+    "    \"penalty\": [\"l2\"],\n",
+    "}\n",
+    "grid_search = GridSearchCV(model, param_grid, scoring=\"accuracy\", cv=5)\n",
+    "grid_search.fit(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "95.956 % Accuracy after GridSearch\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = grid_search.score(X_test, y_test)\n",
+    "print(f'{score*100} % Accuracy after GridSearch')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Conclusion<h2>\n",
+    "<h3>\"After performing a grid search, we observed a minor improvement of 0.004%. This improvement may not be significant for most applications, but it could be helpful for critical applications or when using a different dataset.\"</h3>"
    ]
   }
  ],
