--- a/regression.ipynb
+++ b/regression.ipynb
@@ -539,6 +539,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<ul><li>The strong correlation between diabetes diagnosis and blood glucose level is to be expected, as blood glucose levels are a key indicator of diabetes."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<ul><li>The strong correlation between diabetes diagnosed and HbA1c_level is also to be expected, as HbA1c is a measure of blood sugar control."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h3>Replacing object type columns to integers</h3>"
    ]
   },
