--- a/regression.ipynb
+++ b/regression.ipynb
@@ -18,8 +18,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Importing Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +171,7 @@
        "4          4.8                  155         0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +331,7 @@
        "max         9.000000           300.000000       1.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,12 +345,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h3>Replacing object type columns to integers</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['never', 'No Info', 'current', 'former', 'ever', 'not current'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['smoking_history'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['smoking_history'].replace(['never', 'No Info', 'current', 'former', 'ever', 'not current'],[0,0,1,2,3,4],inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['gender'].unique()\n",
+    "df['gender'].replace(['Female', 'Male', 'Other'],[1,2,3],inplace=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h3>Looking for correlations</h3>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +581,7 @@
        "diabetes                        0.419558  1.000000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,60 +611,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Replacing object type columns to integers</h3>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['never', 'No Info', 'current', 'former', 'ever', 'not current'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['smoking_history'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['smoking_history'].replace(['never', 'No Info', 'current', 'former', 'ever', 'not current'],[0,0,1,2,3,4],inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['gender'].unique()\n",
-    "df['gender'].replace(['Female', 'Male', 'Other'],[1,2,3],inplace=True)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<h3>Seaborn HeatMap</h3>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +625,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -646,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +663,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -685,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,14 +703,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "95.952 % Accuracy\n"
+      "95.928 % Accuracy\n"
      ]
     }
    ],
@@ -727,7 +735,7 @@
    "outputs": [],
    "source": [
     "param_grid = {\n",
-    "    \"C\": np.logspace(-4, 4, 10),\n",
+    "    \"C\": np.logspace(-4, 4, 100),\n",
     "    \"penalty\": [\"l2\"],\n",
     "}\n",
     "grid_search = GridSearchCV(model, param_grid, scoring=\"accuracy\", cv=5)\n",
@@ -736,14 +744,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "95.956 % Accuracy after GridSearch\n"
+      "95.94 % Accuracy after GridSearch\n"
      ]
     }
    ],
@@ -758,7 +766,7 @@
    "metadata": {},
    "source": [
     "<h2>Conclusion<h2>\n",
-    "<h3>\"After performing a grid search, we observed a minor improvement of 0.004%. This improvement may not be significant for most applications, but it could be helpful for critical applications or when using a different dataset.\"</h3>"
+    "<h3>\"After performing a grid search, we observed a minor improvement. This improvement may not be significant for most applications, but it could be helpful for critical applications or when using a different dataset.\"</h3>"
    ]
   }
  ],
